projects/storefrontstyles/scss/components/checkout/steps/shipping-method/_delivery-mode.scss
@import '../../../../theme';

%cx-delivery-mode {
  @include checkout-media-style();

  .form-check {
    display: flex;
    margin-bottom: 0;

    .cx-delivery-label {
      padding: 0;
      margin: 0 auto 1.5rem 0.75rem;
      width: 100%;
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      flex-wrap: wrap;

      .cx-delivery-shipping {
        flex: 50%;
      }

      .cx-delivery-price {
        flex: 50%;
        text-align: right;
      }

      .cx-delivery-details {
        flex: 100%;
        flex-basis: 100%;
        color: var(--cx-color-success);
      }
    }
  }
}

